fix angel wing layer order on safari

--- a/assets/chat/css/generify.scss
+++ b/assets/chat/css/generify.scss
@@ -640,23 +640,23 @@
         height: 27px;
         width: 65px;
         position: absolute;
-        top: calc(50% - 13px);
+        top: -10px;
         animation-iteration-count: 4.43;
         animation-timing-function: linear;
         animation-duration: 1.5s;
         transform-origin: right center;
-        z-index: 0;
+        transform-style: flat;
     }
 
     &:before {
         animation-name: angel-wing-l;
-        transform: scaleX(0.92) rotateZ(0deg) rotateY(24deg) rotateX(0deg);
+        transform: scaleX(0.92) translateZ(-100px) rotateZ(0deg) rotateY(24deg) rotateX(0deg);
         left: -10px;
     }
 
     &:after {
         animation-name: angel-wing-r;
-        transform: scaleX(-0.92) rotateZ(0deg) rotateY(24deg) rotateX(0deg);
+        transform: scaleX(-0.92) translateZ(-100px) rotateZ(0deg) rotateY(24deg) rotateX(0deg);
         right: 55px;
     }
 
@@ -681,19 +681,19 @@
 @mixin angel-wing($side, $d) {
     @keyframes angel-wing-#{$side} {
         0% {
-            transform: scaleX($d * 0.9) rotateZ(40deg) rotateY(50deg) rotateX(60deg);
+            transform: scaleX($d * 0.9) translateZ(-100px) rotateZ(40deg) rotateY(50deg) rotateX(60deg);
         }
         25% {
-            transform: scaleX($d * 1.1) rotateZ(25deg) rotateY(35deg) rotateX(50deg);
+            transform: scaleX($d * 1.1) translateZ(-100px) rotateZ(25deg) rotateY(35deg) rotateX(50deg);
         }
         50% {
-            transform: scaleX($d * 0.85) rotateZ(-15deg) rotateY(20deg) rotateX(-20deg);
+            transform: scaleX($d * 0.85) translateZ(-100px) rotateZ(-15deg) rotateY(20deg) rotateX(-20deg);
         }
         75% {
-            transform: scaleX($d * 0.6) rotateZ(10deg) rotateY(10deg) rotateX(35deg);
+            transform: scaleX($d * 0.6) translateZ(-100px) rotateZ(10deg) rotateY(10deg) rotateX(35deg);
         }
         100% {
-            transform: scaleX($d * 0.9) rotateZ(40deg) rotateY(50deg) rotateX(65deg);
+            transform: scaleX($d * 0.9) translateZ(-100px) rotateZ(40deg) rotateY(50deg) rotateX(65deg);
         }
     }
 }
